--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="todoliststyle.css">
+<link rel="stylesheet" href="https://ananditaa.github.io/todolist/todoliststyle.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   <li>sleep</li>
 </ul>
 
-<script type="text/javascript" src="todolist.js"></script>
+<script type="text/javascript" src="https://ananditaa.github.io/todolist/todolist.js"></script>
 
 </body>
 </html>
